--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   }
   /* background image */
   .smiling-girl {
-    background-image: url("../css_advanced/images/background.png");
+    background-image: url("./images/background.png");
     position: absolute;
     width: 1440px;
     height: 1093px;
@@ -17,10 +17,9 @@ body {
     ``` header ```
                   */
   header {
-    position: absolute;
-    width: 1282px;
+    display: flex;
+    width: 100%;
     height: 1541.98px;
-    left: -7px;
     top: 35.02px;
   }
   /* 
@@ -28,7 +27,7 @@ body {
                     */
   /* logo */
   .logo {
-    background-image: url("../css_advanced/images/logo.png");
+    background-image: url("./images/logo.png");
     position: absolute;
     width: 169px;
     height: 29.46px;
@@ -40,53 +39,17 @@ body {
     position: absolute;
     width: 234px;
     height: 15px;
-    left: 1041px;
-    top: 37px; 
+    left: 80%;
     color: #FFF;
     font-weight: bold;
     font-family: 'Source Sans Pro', sans-serif;
   }
-  .courses {
-    position: absolute;
-    height: 15px;
-    left: 0%;
-    right: 78.63%;
-    top: calc(50% - 15px/2);
-  
-    font-family: 'Source Sans Pro', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FFF;
-  }
-  .pricing {
-    position: absolute;
-    height: 15px;
-    left: 43.59%;
-    right: 37.18%;
-    top: calc(50% - 15px/2);
-  
-    font-family: 'Source Sans Pro', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FFF;
-  }
-  .login {
-    position: absolute;
-    height: 15px;
-    left: 85.47%;
-    right: 0%;
-    top: calc(50% - 15px/2);
-  
-    font-family: 'Source Sans Pro', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FFF
+
+  .navbar {
+    width: auto;
+    color: white;
+    padding: 5px;
+    display: inline;
   }
   
   #getschooled {
@@ -111,7 +74,7 @@ body {
     height: 20px;
     left: 41.18%;
     right: 55.21%;
-    top: calc(50% - 20px/2 - 175.5px);
+    top: 420px;
   
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
@@ -127,7 +90,7 @@ body {
     height: 20px;
     left: 48.89%;
     right: 48.61%;
-    top: calc(50% - 20px/2 - 175.5px);
+    top: 420px;
   
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
@@ -143,7 +106,7 @@ body {
     height: 20px;
     left: 55.35%;
     right: 41.25%;
-    top: calc(50% - 20px/2 - 175.5px);
+    top: 420px;
   
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
@@ -156,13 +119,13 @@ body {
   }
   /* register button */
   .register-button {
-    background: url("../css_advanced/images/button.png") no-repeat;
+    background: url("./images/button.png") no-repeat;
     cursor: pointer;
     border: none;
     position: absolute;
-    left: 44.38%;
+    left: 41.98%;
     right: 44.38%;
-    top: 38.33%;
+    top: 460px;
     bottom: 57.64%;
     background: transparent;
   
@@ -174,7 +137,7 @@ body {
     height: 40px;
     left: 41.94%;
     right: 39.93%;
-    top: calc(50% - 40px/2 + 104.5px);
+    top: 700px;
   
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
@@ -187,6 +150,7 @@ body {
   }
   
   .pros-container {
+    display: flex;
     position: absolute;
     width: 1009px;
     height: 237px;
@@ -195,21 +159,19 @@ body {
   }
   
   #pro-1 {
-    position: absolute;
     left: 15.07%;
     right: 74.51%;
     top: 69.35%;
     bottom: 8.97%;
   }
   #pro-2 {
-    position: absolute;
     left: 35.14%;
     right: 54.44%;
     top: 69.35%;
     bottom: 8.97%;
+    color: white;
   }
   #pro-3 {
-    position: absolute;
     left: 54.65%;
     right: 34.93%;
     top: 69.35%;
@@ -217,7 +179,6 @@ body {
     
   }
   #pro-4 {
-    position: absolute;
     left: 74.72%;
     right: 14.86%;
     top: 69.35%;
@@ -225,10 +186,7 @@ body {
   }
   
   .subtitle {
-    position: absolute;
     height: 48px;
-    left: 0%;
-    right: 0%;
     top: calc(50% - 48px/2 + 94.5px);
   
     font-family: 'Source Sans Pro';
@@ -237,16 +195,12 @@ body {
     font-size: 16px;
     line-height: 24px;
   
-    text-align: center;
   
     color: #FFFFFF;
   }
   
   .pro-name {
-    position: absolute;
     height: 27px;
-    left: 0%;
-    right: 0%;
     top: calc(50% - 27px/2 + 55px);
   
     font-family: 'Source Sans Pro', sans-serif;
@@ -254,8 +208,6 @@ body {
     font-weight: 900;
     font-size: 18px;
     line-height: 27px;
-  
-    text-align: center;
   
     color: #FFFFFF;
   }
@@ -271,6 +223,7 @@ body {
     height: 392px;
     left: -1px;
     top: 1093px;
+    text-align: center;
   
     background: #C271FF;
   }
@@ -289,11 +242,17 @@ body {
   
     color: #FFFFFF;
   }
+
+  .quoteguy {
+    padding-top: 60px;
+    padding-left: 170px;
+    width: 180px;
+    height: 180px;
+  }
   .name {
     position: absolute;
     height: 34px;
-    left: 0%;
-    right: 82.33%;
+    left: 350px;
     top: calc(50% - 34px/2 + 28px);
   
     font-family: 'Source Sans Pro', sans-serif;
@@ -307,8 +266,7 @@ body {
   .subtitle-2 {
     position: absolute;
     height: 34px;
-    left: 0%;
-    right: 77.4%;
+    left: 350px;
     top: calc(50% - 34px/2 + 62px);
   
     font-family: 'Source Sans Pro', sans-serif;
@@ -325,9 +283,8 @@ body {
                     */
   .tutorial-box {
     position: absolute;
-    width: 1228px;
+    width: 100%;
     height: 450px;
-    left: 106px;
     top: 1572px;
   }
   #tutorial-header {
@@ -375,7 +332,7 @@ body {
     bottom: 0%;
   }
   .play-button {
-    background: url("../css_advanced/images/play.png");
+    background: url("./images/play.png");
     position: absolute;
     width: 64px;
     height: 64px;
@@ -415,7 +372,7 @@ body {
     color: rgba(7, 22, 41, 0.501584);
   }
   .rating {
-    background: url("../css_advanced/images/rating.png");
+    background: url("./images/rating.png");
     position: absolute;
     width: 107px;
     height: 15px;
